[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateLeft.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallFunction.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateRight.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/FunctionBlock.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scripts/Levels/Functions/3 - Multi Func Intro.gd" type="Script" id=17]

[node name="3 - Multi Func Intro" type="Node2D"]
script = ExtResource( 17 )

[node name="Background" parent="." instance=ExtResource( 14 )]

[node name="Grid" parent="." instance=ExtResource( 11 )]

[node name="Robot" parent="Grid" instance=ExtResource( 12 )]

[node name="Door" parent="Grid" instance=ExtResource( 2 )]

[node name="Button1" parent="Grid" instance=ExtResource( 8 )]

[node name="Button2" parent="Grid" instance=ExtResource( 8 )]

[node name="Button3" parent="Grid" instance=ExtResource( 8 )]

[node name="Level Control" parent="." instance=ExtResource( 16 )]

[node name="IDE" parent="." instance=ExtResource( 13 )]

[node name="Counter" parent="IDE/Main" index="4"]
maxBlocks = 5

[node name="F1" parent="IDE" instance=ExtResource( 15 )]
margin_top = 513.0
margin_bottom = 788.0

[node name="Counter" parent="IDE/F1" index="4"]
maxBlocks = 4

[node name="F2" parent="IDE" instance=ExtResource( 15 )]
margin_top = 792.0
margin_bottom = 1067.0

[node name="Label" parent="IDE/F2" index="0"]
text = "FUNC2"

[node name="Counter" parent="IDE/F2" index="4"]
maxBlocks = 4

[node name="CodeBlockBar" parent="." instance=ExtResource( 1 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 9 )]

[node name="RotateLeft" parent="CodeBlockBar" instance=ExtResource( 4 )]

[node name="RotateRight" parent="CodeBlockBar" instance=ExtResource( 10 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 5 )]

[node name="Call_F1" parent="CodeBlockBar" instance=ExtResource( 6 )]

[node name="Call_F2" parent="CodeBlockBar" instance=ExtResource( 6 )]

[node name="TextBox" parent="." instance=ExtResource( 7 )]

[node name="PopupMenu" parent="." instance=ExtResource( 3 )]

[editable path="IDE"]
[editable path="IDE/Main"]
[editable path="IDE/F1"]
[editable path="IDE/F2"]
